# wowctl

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  config.toml.example
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
src/: addon.rs  circuit_breaker.rs  colors.rs  config.rs  error.rs  fingerprint.rs  lib.rs  main.rs  registry.rs  utils.rs
src/commands/: adopt.rs  auto_update.rs  config.rs  ignore.rs  info.rs  install.rs  list.rs  mod.rs  remove.rs  search.rs  stale.rs  update.rs
src/sources/: curseforge.rs  mod.rs
